# idvorkin-blog-mcp

./: .env.example  .gcloudignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  MULTI_REPO_SETUP.md  README.md  blog_mcp_server.py  check_syntax.py  conftest.py  justfile  mcp.json  mcp_cli.py  package-lock.json  pyproject.toml  requirements.txt  run_simple_tests.py  run_tests.sh  test_blog_mcp_e2e.py  test_deployed_server.py  test_e2e.py  test_multi_repo.py  test_production_e2e.py  test_unit.py  test_utils.py
docs/plans/: 2026-02-20-list-open-prs-design.md  2026-02-20-test-modernization-design.md
