[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Igor's blog at idvork.in"
authors = [
    { name = "Igor Dvorkin", email = "igor.dvorkin@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.8.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "fastmcp>=2.0.0",
    "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
blog-mcp-server = "blog_mcp_server:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.24.0",
    "pytest-cov>=4.0.0",
]